[package]
name = "sosistab"
version = "0.4.49"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Geph Project <contact@geph.io"]
edition = "2021"
description="An obfuscated datagram transport for horrible networks"
license="MPL-2.0"
repository="https://github.com/geph-official/sosistab"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh= "0.1.7"
smol= "1.2.5"
socket2= "0.3"
x25519-dalek={ version = "1.1.0", features = ["serde"] }
serde={ version = "1.0.131", features = ["derive", "rc"] }
# bytes={ version = "1.0.0", features = ["serde"] }
blake3= "0.3"
c2-chacha= "0.3.3"
rand= "0.7"
constant_time_eq= "0.1.5"
bincode= "1.3.3"
event-listener= "2.5.1"
futures-util= "0.3.18"
parking_lot= "0.11.2"
# governor= "0.3.1"
async-dup= "1.2.2"
once_cell = "1.9.0"
arc-swap= "1.5.0"
num_cpus= "1.13.0"
arraymap= "0.1.1"
anyhow= "1.0.51"
scopeguard= "1.1.0"
reed-solomon-erasure= "4.0.2"
indexmap= "1.7.0"
bloomfilter = { version = "1.0.9", features = ["random"] }
concurrent-queue= "1.2.2"
rand_chacha= "0.2"
smolscale= "0.3.16"
# smolscale={path="../smolscale"}
futures-intrusive= "0.4.0"
async-trait= "0.1.52"
dashmap= "5.0.0"
smol-timeout= "0.6.0"
env_logger= "0.9.0"
# futures-timer= "3.0.2"
nonzero_ext= "0.3.0"
tracing={ version = "0.1.29", features = ["log"] }
rustc-hash= "1.1.0"
cached= "0.26.2"
ring= "0.16.20"
im= "15.0.0"
smallvec= "1.7.0"
arrayvec= "0.7.2"
thiserror = "1.0.30"
ordered-float= "2.8.0"
hex= "0.4.3"
fastrand= "1.5.0"
# sluice="0.5"
bipe= "0.2.0"
serde_bytes = "0.11.5"
probability = "0.17.0"
serde_json = "1.0.73"
priority-queue = "1.2.1"
slab = "0.4.5"
dhat = "0.2.4"
# sliding_extrema = "0.1.4"

[profile.release]
panic = "abort"
opt-level=3
debug=2

[target.'cfg(unix)'.dependencies]
nix= "0.23.0"

[dev-dependencies]

socksv5= "0.3.0"
